Fixed tab spacing

--- a/core/app/assets/stylesheets/bubble/tabs.css.less
+++ b/core/app/assets/stylesheets/bubble/tabs.css.less
@@ -16,6 +16,7 @@
     float: left;
     height: 24px;
     .opacity(0);
+    margin-bottom: -2px;
 
     &.alwaysshow, &.tabOpened {
       .opacity(100);
